task5/tests/our-tests/output/t4.out
lli: <stdin>:41:16: error: use of undefined value '%-21859'
%t8 = sdiv i32 %-21859, %t9
               ^

